complete all pages without responsive

--- a/cart-order-complete.html
+++ b/cart-order-complete.html
@@ -171,7 +171,7 @@
         </div>        
     </header>
 
-    <main>
+    <main class="content">
         <div class="sec-40 mt-5">
             <div class="container">
                 <div class="row">
