--- a/forget-password.html
+++ b/forget-password.html
@@ -14,7 +14,7 @@
 
     <header></header>
 
-    <main>
+    <main class="content">
         <div class="row p-0 m-0">
             <div class="col-lg-7 p-0 m-0">
                 <div class="right-img w-100">
@@ -42,7 +42,6 @@
                 </form>
             </div>
         </div>
-
     </main>
 
     <footer></footer>
