--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         
     </header>
 
-    <main>
+    <main class="content">
 
         <div class="sec-1 mb-5" data-aos="zoom-in-up">
             <div class="container position-relative">
@@ -851,7 +851,7 @@
                         <h2 class="new-arrival d-flex justify-content-start align-items-center">Articles</h2>
                     </div>
                     <div class="col-6 full-height d-flex justify-content-end align-items-center">
-                        <a href="articles.html" class="more-product d-flex justify-content-end align-items-center">More Articles<i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="blogs.html" class="more-product d-flex justify-content-end align-items-center">More Articles<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
