--- a/product.html
+++ b/product.html
@@ -193,7 +193,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="content">
         <div class="sec-31 mt-3 mb-3" data-aos="zoom-in-up">
             <div class="container">
                 <div class="row">
