--- a/cart-step-checkout.html
+++ b/cart-step-checkout.html
@@ -172,7 +172,7 @@
         
     </header>
 
-    <main>
+    <main class="content">
         <div class="sec-40 mt-5">
             <div class="container">
                 <div class="row">
