--- a/login.html
+++ b/login.html
@@ -13,9 +13,8 @@
 
     <header></header>
 
-    <main>
-
-        <div class="row p-0 m-0">
+    <main class="content">
+        <div class="row p-0 m-0" data-aos="zoom-in-up">
             <div class="col-lg-6 p-0 m-0">
                 <div class="right-img w-100">
                     <h2 class="logo-text text-center pt-5">3legant.</h2>
@@ -55,11 +54,11 @@
                 </form>
             </div>
         </div>
-
     </main>
 
     <footer></footer>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="assets/js/login.js"></script>
 </body>
