--- a/shop.html
+++ b/shop.html
@@ -263,7 +263,7 @@
         </div>
     </div>
 
-    <main>
+    <main class="content">
         <div class="sec-20" data-aos="zoom-in-up">
             <div class="container">
                 <div class="row">
