--- a/sign-up.html
+++ b/sign-up.html
@@ -13,7 +13,7 @@
 
     <header></header>
 
-    <main>
+    <main class="content">
 
         <div class="row p-0 m-0">
             <div class="col-lg-6 p-0 m-0 full-height">
