--- a/product.html
+++ b/product.html
@@ -51,49 +51,29 @@
                             <i class="fa-solid fa-magnifying-glass position-absolute"></i>
                         </div>
                         <div class="mt-3 w-100 d-flex flex-column justify-content-between align-items-start" id="navbarNav">
-                            <button class="btn homt-side-btn d-flex justify-content-start ps-3 w-100">Home</button>
-                            <div class="accordion accordion-flush w-100" id="accordionFlushExample">
-                                <div class="accordion-item ps-0">
-                                    <h2 class="accordion-header ps-0">
-                                    <button class="btn accordion-button collapsed ps-3" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                        Products
-                                    </button>
-                                    </h2>
-                                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item’s accordion body. Let’s imagine this being filled with some actual content.</div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header">
-                                    <button class="btn accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                        Shop
-                                    </button>
-                                    </h2>
-                                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item’s accordion body.</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <button class="btn contact-side-btn d-flex justify-content-start ps-3 w-100">Contact Us</button>
+                            <a href="index.html" class="btn homt-side-btn d-flex justify-content-start ps-3 w-100">Home</a>
+                            <a href="shop.html" class="btn homt-side-btn d-flex justify-content-start ps-3 w-100">Shop</a>
+                            <a href="shop.html" class="btn homt-side-btn d-flex justify-content-start ps-3 w-100">Products</a>
+                            <a href="contact-us.html" class="btn contact-side-btn d-flex justify-content-start ps-3 w-100">Contact Us</a>
                         </div>
                     </div>
                     <div class="bottm-content w-100">
                         <div class="btns d-flex flex-column justify-content-center align-items-start w-100">
-                            <a href="cart.html" class="cart-btn-offcanves btn w-100 d-flex justify-content-between align-items-center">
+                            <a href="cart-shipping.html" class="cart-btn-offcanves btn w-100 d-flex justify-content-between align-items-center">
                                 <span>Cart</span>
                                 <div class="count-of-products-in-cart right-cart d-flex justify-content-center align-items-center gap-2">
                                     <i class="fa-solid fa-cart-shopping"></i>
                                     <div class="count-of-shopping-items">0</div>
                                 </div>
                             </a>
-                            <a href="wish-list.html" class="cart-btn-offcanves btn w-100 d-flex justify-content-between align-items-center">
+                            <a href="wishlist.html" class="cart-btn-offcanves btn w-100 d-flex justify-content-between align-items-center">
                                 <span>Wishlist</span>
                                 <div class="right-cart d-flex justify-content-center align-items-center gap-2">
                                     <i class="fa-regular fa-heart"></i>
                                     <div class="count-of-shopping-items">0</div>
                                 </div>
                             </a>
-                            <button class="w-100 mt-1 btn sign-in-btn d-flex justify-content-center align-items-center rounded-3">Sign In</button>
+                            <a href="login.html" class="w-100 mt-1 btn sign-in-btn d-flex justify-content-center align-items-center rounded-3">Sign In</a>
                             <div class=" mt-3 social-media-offcanves d-flex justify-content-start align-items-center gap-5">
                                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                                 <a href=""><i class="fa-brands fa-facebook-f"></i></a>
@@ -169,9 +149,9 @@
                         <h2 class="total-amount">$99.00</h2>
                     </div>
                     <div class="checkout d-flex justify-content-center align-items-center w-100">
-                        <button class="btn w-100">Checkout</button>
+                        <a href="cart-shipping.html" class="btn w-100">Checkout</a>
                     </div>
-                    <a href="cart.html" class="pt-2 text-decoration-underline d-flex justify-content-center align-items-center">View Cart</a>
+                    <a href="cart-shipping.html" class="pt-2 text-decoration-underline d-flex justify-content-center align-items-center">View Cart</a>
                 </div>
             </div>
             </div>
@@ -190,7 +170,7 @@
                     <button id="search-btn" class="btn search-btn-color ps-5 pe-5 pt-2 pb-2 rounded-3">Search</button>
                 </form>
             </div>
-        </div>
+        </div>    
     </header>
 
     <main class="content">
