update js code and fix bugs

--- a/contact-us.html
+++ b/contact-us.html
@@ -92,7 +92,7 @@
                 <div class="collapse navbar-collapse flex-grow-0 justify-content-between w-75" id="navbarNav">
                     <ul class="navbar-nav w-50 justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="shop.html">Shop</a>
@@ -101,7 +101,7 @@
                             <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact-us.html">Contact Us</a>
+                            <a class="nav-link active" href="contact-us.html">Contact Us</a>
                         </li>
                     </ul>
                     <div class="btns d-flex justify-content-lg-between justify-content-start align-items-center gap-lg-0 gap-3">
