--- a/cart-order-complete.html
+++ b/cart-order-complete.html
@@ -201,7 +201,7 @@
                             <span>Checkout details</span>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-9">
+                    <div class="col-lg-4">
                         <div class="cart-step active d-flex pt-3 pb-3 justify-content-center align-items-center gap-3 ">
                             <div class="circuil">3</div>
                             <span>Order complete</span>
