--- a/shop.html
+++ b/shop.html
@@ -93,13 +93,13 @@
                 <div class="collapse navbar-collapse flex-grow-0 justify-content-between w-75" id="navbarNav">
                     <ul class="navbar-nav w-50 justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Shop</a>
+                            <a class="nav-link active" href="shop.html">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="products.html">Products</a>
+                            <a class="nav-link" href="shop.html">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact-us.html">Contact Us</a>
