fix some bugs in cart feature

--- a/product.html
+++ b/product.html
@@ -223,7 +223,8 @@
                                                     data-src="assets/imgs/Gray-Tray-table.jpg"
                                                     >
                                                     <img src="assets/imgs/Gray-Tray-table.jpg" alt="mobilia">
-                                                </a>                                    </div>
+                                                </a>
+                                            </div>
                                             <div class="swiper-slide">
                                                 <a href="" 
                                                     data-fancybox="gallery"
@@ -286,22 +287,52 @@
                     <div class="col-lg-6 col-12">
                         <div class="row d-lg-flex d-none">
                             <div class="prod-img mb-4">
-                                <img src="assets/imgs/Show-Tray-table.jpg" alt="product">
+                                <a href=""
+                                    data-fancybox="gallery-2" 
+                                    data-src="assets/imgs/Show-Tray-table.jpg"
+                                    >
+                                    <img src="assets/imgs/Show-Tray-table.jpg" alt="product">
+                                </a>
                             </div>
                             <div class="prod-img mb-4">
-                                <img src="assets/imgs/Black-Tray-table.jpg" alt="product">
+                                <a href=""
+                                    data-fancybox="gallery-2" 
+                                    data-src="assets/imgs/Black-Tray-table.jpg"
+                                    >
+                                    <img src="assets/imgs/Black-Tray-table.jpg" alt="product">
+                                </a>
                             </div>
                             <div class="prod-img mb-4">
-                                <img src="assets/imgs/Show-Tray-table-2.jpg" alt="product">
+                                <a href=""
+                                    data-fancybox="gallery-2" 
+                                    data-src="assets/imgs/Show-Tray-table-2.jpg"
+                                    >
+                                    <img src="assets/imgs/Show-Tray-table-2.jpg" alt="product">
+                                </a>
                             </div>
                             <div class="prod-img mb-4">
-                                <img src="assets/imgs/Show-Tray-table-3.jpg" alt="product">
+                                <a href=""
+                                    data-fancybox="gallery-2" 
+                                    data-src="assets/imgs/Show-Tray-table-3.jpg"
+                                    >
+                                    <img src="assets/imgs/Show-Tray-table-3.jpg" alt="product">
+                                </a>
                             </div>
                             <div class="prod-img mb-4">
-                                <img src="assets/imgs/Show-Tray-table-4.jpg" alt="product">
+                                <a href=""
+                                    data-fancybox="gallery-2" 
+                                    data-src="assets/imgs/Show-Tray-table-4.jpg"
+                                    >
+                                    <img src="assets/imgs/Show-Tray-table-4.jpg" alt="product">
+                                </a>
                             </div>
                             <div class="prod-img mb-4">
-                                <img src="assets/imgs/Zoom-Tray-table.jpg" alt="product">
+                                <a href=""
+                                    data-fancybox="gallery-2" 
+                                    data-src="assets/imgs/Show-Tray-table-4.jpg"
+                                    >
+                                    <img src="assets/imgs/Zoom-Tray-table.jpg" alt="product">
+                                </a>
                             </div>
                         </div>
                     </div>
